# freelibc

./: CMakeLists.txt  LICENSE  README.md  a.out  bit.c  install.sh  uninstall.sh
include/: include.h
lib/: CMakeLists.txt  Makefile  test.c
lib/routines/builtin/: __ashldi3.c  __ashlsi3.c  __ashlti3.c  __ashrdi3.c  __ashrsi3.c  __ashrti3.c  __lshrdi3.c  __lshrsi3.c  __lshrti3.c  __mulsi3.c
lib/std/: std.c
test/: CMakeLists.txt  Makefile  main.c  test  test.c
